--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
 click==6.7
+dnspython==1.16.0
+eventlet==0.25.0
 Flask==0.12.2
+Flask-SocketIO==4.1.0
+greenlet==0.4.15
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+monotonic==1.5
+python-engineio==3.8.1
+python-socketio==4.1.0
+six==1.12.0
 Werkzeug==0.13
