--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 monotonic==1.5
+nltk==3.4.3
 python-engineio==3.8.1
 python-socketio==4.1.0
 six==1.12.0
+textblob==0.15.3
 Werkzeug==0.13
